Added the ability to gradiant color the plot

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 ### I ain't trying to have my shoddy literary prowess exposed by including the reports I write for the class
 tex/
+
+### MATLAB autosave files
+.asv
