Started sixth assignment

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 ### I ain't trying to have my shoddy literary prowess exposed by including the reports I write for the class
 tex/
 
+### Super informal one page proposal, not worth archieving, just see final project folder for details
+project_proposal/
+
 ### MATLAB autosave files
 .asv
